# SafePtr

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
benchmark/: bench_safeptr.cpp
cmake/: FetchGTest.cmake
docs/: Doxyfile
include/: safeptr.hpp
package/: conanfile.py
package/vcpkg-port/: CONTROL  portfile.cmake
tests/: test_safeptr.cpp
